add entitites